@@ -224,7 +224,7 @@ subprojects {
       args = params.split(',') as List
     }
     classpath = sourceSets.main.runtimeClasspath + sourceSets.test.runtimeClasspath
-    jvmArgs '-Xmx2g', '-XX:MaxPermSize=512m'
+    jvmArgs '-Xmx2g'
   }
 
   task scalaTest(type: Test) {
@@ -235,12 +235,12 @@ subprojects {
     minHeapSize '4g'
     maxHeapSize '4g'
     jvmArgs '-ea', '-XX:+HeapDumpOnOutOfMemoryError','-XX:+UseConcMarkSweepGC', '-XX:MaxNewSize=1g',
-            '-XX:+UseParNewGC', '-XX:+CMSClassUnloadingEnabled', '-XX:MaxPermSize=512m'
+            '-XX:+UseParNewGC', '-XX:+CMSClassUnloadingEnabled'
     // for benchmarking
     // minHeapSize '12g'
     // maxHeapSize '12g'
     // jvmArgs '-XX:+HeapDumpOnOutOfMemoryError','-XX:+UseConcMarkSweepGC', '-XX:MaxNewSize=2g',
-    //        '-XX:+UseParNewGC', '-XX:+CMSClassUnloadingEnabled', '-XX:MaxPermSize=512m'
+    //        '-XX:+UseParNewGC', '-XX:+CMSClassUnloadingEnabled'
 
     testLogging.exceptionFormat = 'full'
 
@@ -278,7 +278,7 @@ subprojects {
     maxParallelForks = (2 * Runtime.getRuntime().availableProcessors())
     maxHeapSize '2g'
     jvmArgs '-ea', '-XX:+HeapDumpOnOutOfMemoryError','-XX:+UseConcMarkSweepGC',
-            '-XX:+UseParNewGC', '-XX:+CMSClassUnloadingEnabled', '-XX:MaxPermSize=512m'
+            '-XX:+UseParNewGC', '-XX:+CMSClassUnloadingEnabled'
     testLogging.exceptionFormat = 'full'
 
     include '**/*.class'
@@ -303,10 +303,10 @@ subprojects {
     dependsOn ':cleanDUnit'
     dependsOn ':product'
     maxParallelForks = 1
-    minHeapSize '2g'
-    maxHeapSize '2g'
+    minHeapSize '1536m'
+    maxHeapSize '1536m'
 
-    jvmArgs = ['-XX:+HeapDumpOnOutOfMemoryError', '-XX:MaxPermSize=384m',
+    jvmArgs = ['-XX:+HeapDumpOnOutOfMemoryError',
                '-XX:+UseParNewGC', '-XX:+UseConcMarkSweepGC',
                '-XX:CMSInitiatingOccupancyFraction=50',
                '-XX:+CMSClassUnloadingEnabled', '-ea']
@@ -591,8 +591,6 @@ task generateSources {
 }
 
 task product(type: Zip) {
-  dependsOn ':snappy-store:gemfirexd-client:shadowJar'
-  dependsOn ":snappy-core_${scalaBinaryVersion}:shadowJar"
   dependsOn ":snappy-cluster_${scalaBinaryVersion}:jar"
   dependsOn ":snappy-examples_${scalaBinaryVersion}:jar"
   dependsOn ":snappy-spark:snappy-spark-assembly_${scalaBinaryVersion}:product"
@@ -802,6 +800,8 @@ distZip {
 
 // use the task below to prepare final release bits
 task distProduct {
+  dependsOn ':snappy-store:gemfirexd-client:shadowJar'
+  dependsOn ":snappy-core_${scalaBinaryVersion}:shadowJar"
   dependsOn product, distTar, distZip
 }
 
@@ -840,11 +840,17 @@ task cleanAll {
 }
 task buildAll {
   dependsOn getTasksByName('assemble', true).collect { it.path }
+  dependsOn getTasksByName('product', true).collect { it.path }
   dependsOn getTasksByName('testClasses', true).collect { it.path }
   dependsOn distTar, distZip
   mustRunAfter cleanAll
 }
+task buildDtests {
+  delete "${snappyProductDir}/dtests/build-artifacts/scala-${scalaBinaryVersion}/"
+  dependsOn "snappy-dtests_${scalaBinaryVersion}:packageTests"
+}
 task checkAll {
+  dependsOn ':snappy-spark:scalaStyle'
   if (project.hasProperty('store')) {
     dependsOn ':snappy-store:check'
   }
@@ -1007,6 +1013,10 @@ task publishDocs(type:Exec) {
 task precheckin {
   dependsOn cleanAll, buildAll, checkAll, allReports
   dependsOn ':snappy-spark:scalaStyle', docs
+  if (!project.hasProperty('smoke.skip')) {
+    dependsOn ":buildDtests"
+    dependsOn ":snappy-dtests_${scalaBinaryVersion}:scalaTest"
+  }
 }
 
 if (project.hasProperty('trackBuildTime') ) {
